--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -57,8 +57,12 @@ body {
   background: url("3.png") no-repeat
     center top/cover;
 }
-
-
+  
+.slide:nth-child(3) {
+  background: url("4.png") no-repeat
+    center top/cover;
+}
+  
 .buttons button#prev {
   position: absolute;
   top: 50%;
