--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -64,13 +64,16 @@
     <div class="slider">
         <div class="slides">
             <div class="slide">
-                <img src="https://via.placeholder.com/600x400?text=Slide+1" alt="Slide 1">
+                <img src="1.png" alt="Slide 1">
             </div>
             <div class="slide">
-                <img src="https://via.placeholder.com/600x400?text=Slide+2" alt="Slide 2">
+                <img src="2.png" alt="Slide 2">
             </div>
             <div class="slide">
-                <img src="https://via.placeholder.com/600x400?text=Slide+3" alt="Slide 3">
+                <img src="3.png" alt="Slide 3">
+            </div>
+            <div class="slide">
+                <img src="4.png" alt="Slide 4">
             </div>
         </div>
         <div class="navigation">
