--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Slider</title>
+    <title>Responsive Image Slider</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,6 +19,7 @@
             position: relative;
             width: 80%;
             max-width: 600px;
+            aspect-ratio: 16 / 9; /* 기본 비율 (16:9) 설정 */
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -26,6 +27,7 @@
         .slides {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            height: 100%;
         }
         .slide {
             min-width: 100%;
@@ -33,7 +35,8 @@
         }
         .slide img {
             width: 100%;
-            display: block;
+            height: 100%;
+            object-fit: contain; /* 이미지 비율 유지 */
         }
         .navigation {
             position: absolute;
