--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -37,6 +37,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain; /* 이미지 비율 유지 */
+            object-position: center; /* 이미지 중앙 정렬 */
         }
         .navigation {
             position: absolute;
@@ -67,7 +68,7 @@
     <div class="slider">
         <div class="slides">
             <div class="slide">
-                <img src="1.png" alt="Slide 1">
+               <img src="1.png" alt="Slide 1">
             </div>
             <div class="slide">
                 <img src="2.png" alt="Slide 2">
@@ -77,6 +78,7 @@
             </div>
             <div class="slide">
                 <img src="4.png" alt="Slide 4">
+
             </div>
         </div>
         <div class="navigation">
