--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -19,7 +19,6 @@
             position: relative;
             width: 80%;
             max-width: 600px;
-            aspect-ratio: 16 / 9; /* 기본 비율 (16:9) 설정 */
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -27,17 +26,18 @@
         .slides {
             display: flex;
             transition: transform 0.5s ease-in-out;
-            height: 100%;
         }
         .slide {
             min-width: 100%;
             box-sizing: border-box;
+            display: flex; /* Flexbox를 사용해 중앙 정렬 */
+            justify-content: center;
+            align-items: center;
+            background-color: #000; /* 슬라이더 배경색 (이미지보다 작은 경우 대비) */
         }
         .slide img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain; /* 이미지 비율 유지 */
-            object-position: center; /* 이미지 중앙 정렬 */
+            max-width: 100%; /* 가로 비율에 맞게 조정 */
+            max-height: 100%; /* 세로 비율에 맞게 조정 */
         }
         .navigation {
             position: absolute;
@@ -68,7 +68,7 @@
     <div class="slider">
         <div class="slides">
             <div class="slide">
-               <img src="1.png" alt="Slide 1">
+                <img src="1.png" alt="Slide 1">
             </div>
             <div class="slide">
                 <img src="2.png" alt="Slide 2">
@@ -78,6 +78,7 @@
             </div>
             <div class="slide">
                 <img src="4.png" alt="Slide 4">
+
 
             </div>
         </div>
