--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -19,9 +19,14 @@
             position: relative;
             width: 80%;
             max-width: 600px;
+            aspect-ratio: 16 / 9; /* 슬라이더의 기본 비율 */
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: #000; /* 슬라이더 배경색 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .slides {
             display: flex;
@@ -29,15 +34,15 @@
         }
         .slide {
             min-width: 100%;
-            box-sizing: border-box;
-            display: flex; /* Flexbox를 사용해 중앙 정렬 */
+            display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #000; /* 슬라이더 배경색 (이미지보다 작은 경우 대비) */
         }
         .slide img {
-            max-width: 100%; /* 가로 비율에 맞게 조정 */
-            max-height: 100%; /* 세로 비율에 맞게 조정 */
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* 비율 유지하며 맞춤 */
+            object-position: center; /* 이미지의 중앙 배치 */
         }
         .navigation {
             position: absolute;
@@ -78,7 +83,6 @@
             </div>
             <div class="slide">
                 <img src="4.png" alt="Slide 4">
-
 
             </div>
         </div>
