--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -19,14 +19,10 @@
             position: relative;
             width: 80%;
             max-width: 600px;
-            aspect-ratio: 16 / 9; /* 슬라이더의 기본 비율 */
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: #000; /* 슬라이더 배경색 */
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-color: #000;
         }
         .slides {
             display: flex;
@@ -37,12 +33,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: #000;
         }
         .slide img {
+            width: auto;
+            height: 100%;
             max-width: 100%;
-            max-height: 100%;
             object-fit: contain; /* 비율 유지하며 맞춤 */
-            object-position: center; /* 이미지의 중앙 배치 */
         }
         .navigation {
             position: absolute;
@@ -83,7 +80,6 @@
             </div>
             <div class="slide">
                 <img src="4.png" alt="Slide 4">
-
             </div>
         </div>
         <div class="navigation">
